# LTStreamingModulesLegacy

./: CMakeLists.txt
.github/workflows/: ci.yml
changelog/: changelog
cmake/: CMakeLists.txt  CommonUtils.cmake  ModuleOptions.cmake
modules/: CMakeLists.txt
modules/websocket_streaming_client_module/: CMakeLists.txt
modules/websocket_streaming_client_module/src/: CMakeLists.txt
modules/websocket_streaming_client_module/tests/: CMakeLists.txt  test_app.cpp  test_websocket_streaming_client_module.cpp
modules/websocket_streaming_server_module/: CMakeLists.txt
modules/websocket_streaming_server_module/src/: CMakeLists.txt
modules/websocket_streaming_server_module/tests/: CMakeLists.txt  test_app.cpp  test_websocket_streaming_server_module.cpp
shared/libraries/: CMakeLists.txt
shared/libraries/websocket_streaming/: CMakeLists.txt
shared/libraries/websocket_streaming/src/: CMakeLists.txt  input_signal.cpp
shared/libraries/websocket_streaming/tests/: CMakeLists.txt  streaming_test_helpers.h  test_app.cpp  test_signal_descriptor_converter.cpp  test_websocket_client_device.cpp
tests/: CMakeLists.txt
tests/test_ws_siggen_integration/: CMakeLists.txt  test_app.cpp
